--- a/yummyanime.css
+++ b/yummyanime.css
@@ -15,7 +15,7 @@
 .side_menu{
     display: block;
     height: 50px;
-    width: 370px;
+    width: 372px;
     background-color: #39bc71;
     position: absolute;
     top: 15%;
@@ -45,6 +45,19 @@
     position: absolute;
     top: 28px;
     left: 37px;
+}
+.inst{
+    display: inline-block;
+    margin: -2px;
+    font-size: 30px;
+    position: relative;
+    top: -47px;
+    left: 134px;
+    padding: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-right: solid 1px #fff;
+    color: #fff;
 }
 /* Logo */
 
